fixing login button hover effect on mobile

--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -56,6 +56,9 @@
             &:active {
                 background-color: darken($color: $blue, $amount: 5%);
             }
+            &:hover:not(:active) {
+                background-color: $blue;
+            }
         }
     }
     &__input {
